# advent_of_code

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  pytest.yml
2022/: advent_python.ipynb
2022/cpp/: CMakeLists.txt  Makefile
2022/cpp/executables/: 01.x
2022/cpp/include/: 01.H
2022/cpp/src/: 01.C  01.cpp
2022/python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py
2023/python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py
aoc/: __init__.py  _version.py  aoc_cli.py
aoc/aoc_2020/python/: ex_01.py  ex_02.py  ex_03.py  ex_04.py
aoc/aoc_2022/inputs/: 11.txt
aoc/aoc_2022/python/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  ex_10.py  ex_11.py  ex_12.py  ex_13.py  ex_14.py  ex_15.py  ex_16.py  ex_17.py  ex_18.py
aoc/aoc_2023/inputs/: 03_test.txt
aoc/aoc_2023/python/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  ex_10.py  ex_11.py
aoc/aoc_2024/inputs/: 12.txt  16.txt  17.txt  24.txt  25.txt
aoc/aoc_2024/python/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  ex_10.py  ex_11.py  ex_12.py  ex_13.py  ex_14.py  ex_15.py  ex_16.py  ex_17.py  ex_18.py  ex_19.py  ex_20.py  ex_21.py  ex_22.py  (+3 more)
aoc/templates/: code.py  test.py
aoc/tests/: test_cli.py
docs/: .gitignore  Makefile
docs/source/: .gitignore  api.rst  ci_config.rst  code_style.rst  conf.py  index.rst  installing.rst
(+65 files in other folders)
